--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "node-js-sample",
-  "version": "0.2.2",
+  "version": "1.0.0",
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha"
   },
   "dependencies": {
     "express": "^4.13.3"
@@ -25,5 +26,8 @@
   "contributors": [
     "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^5.2.0"
+  }
 }
